[package]
name = "workflow-dom"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
workflow-wasm = { path = "../workflow-wasm" }
workflow-log = { path = "../workflow-log" }
wasm-bindgen = "0.2.79"
js-sys = "0.3.56"
regex = "1.5.5"

# thiserror = "1.0"

[dependencies.web-sys]
version = "0.3.56"
features = [
    'Window',
    'Document',
    'Element',
    'Url',
    'Blob',
    'CustomEvent',


    # 'console',
    # 'Document',
    # 'Element',
    # 'HtmlElement',
    # 'HtmlLinkElement',
    # 'HtmlImageElement',
    # 'HtmlInputElement',
    # 'HtmlHrElement',
    'Node',
    'NodeList',
    # 'Window',
    # 'InputEvent',
    # 'MouseEvent',
    # 'ErrorEvent',
    # 'KeyEvent',
    # 'CustomEvent',
    'HtmlCollection',
    # 'DomTokenList',
    # 'SvgPathElement',
    # 'SvgPoint',
    # 'DomRect',
    # 'TransitionEvent',
    # 'MutationObserver',
    # 'MutationObserverInit',
    # 'MutationRecord',


]