[package]
name = "workflow-dom"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/workflow-rs/workflow-dom"
keywords = ["wasm","framework","html","dom","inject","script","css","javascript"]
categories = []
exclude = ["/.*", "/test"]
description = """
DOM injection utilities for run-time injection of JavaScript and CSS
"""

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
workflow-wasm = { path = "../workflow-wasm" }
workflow-log = { path = "../workflow-log" }
wasm-bindgen = "0.2.79"
js-sys = "0.3.56"
regex = "1.5.5"

[dependencies.web-sys]
version = "0.3.56"
features = [
    'Window',
    'Document',
    'Element',
    'Url',
    'Blob',
    'CustomEvent',
    'Node',
    'NodeList',
    'HtmlCollection',
]